@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-01T01:24:32Z",
-  "count_outdated" : 5194,
-  "uniques_outdated" : 2825,
-  "count" : 5226,
-  "uniques" : 2855,
+  "timestamp" : "2025-08-01T12:31:32Z",
+  "count_outdated" : 5196,
+  "uniques_outdated" : 2827,
+  "count" : 5227,
+  "uniques" : 2856,
   "clones" : [
-    {
-      "timestamp": "2025-07-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2025-07-19T00:00:00Z",
       "count": 1,
@@ -115,6 +106,15 @@
     },
     {
       "timestamp": "2025-07-31T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
