@@ -3,11 +3,6 @@
   "uniques": 14,
   "clones": [
     {
-      "timestamp": "2025-07-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-07-19T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -64,6 +59,11 @@
     },
     {
       "timestamp": "2025-07-31T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-08-01T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
